chore: more structure

--- a/paper-2024-woa-edge-cloud-intelligence.tex
+++ b/paper-2024-woa-edge-cloud-intelligence.tex
@@ -38,7 +38,7 @@
 
 %%
 %% The "title" command
-\title{A better way to format your document for CEUR-WS}
+\title{Learning Intelligent Services for Edge-Cloud Computing}
 
 \tnotemark[1]
 \tnotetext[1]{You can use this document as the template for preparing your
@@ -47,34 +47,29 @@
 %%
 %% The "author" command and its associated commands are used to define
 %% the authors and their affiliations.
-\author[1,2]{Dmitry S. Kulyabov}[%
+\author[1]{Gianluca Aguzzi}[%
 orcid=0000-0002-0877-7063,
-email=kulyabov-ds@rudn.ru,
+email=gianluca.aguzzi@unibo.it,
 url=https://yamadharma.github.io/,
 ]
-\cormark[1]
-\fnmark[1]
-\address[1]{Peoples' Friendship University of Russia (RUDN University),
-  6 Miklukho-Maklaya St, Moscow, 117198, Russian Federation}
-\address[2]{Joint Institute for Nuclear Research,
-  6 Joliot-Curie, Dubna, Moscow region, 141980, Russian Federation}
+\address[1]{Università di Bologna -- ALMA MATER STUDIOURM, Via Dell'Università 50, 47521 Cesena, Italy}
 
-\author[3]{Ilaria Tiddi}[%
+\author[1]{Davide Domini}[%
 orcid=0000-0001-7116-9338,
 email=i.tiddi@vu.nl,
 url=https://kmitd.github.io/ilaria/,
 ]
-\fnmark[1]
-\address[3]{Vrije Universiteit Amsterdam, De Boelelaan 1105, 1081 HV Amsterdam, The Netherlands}
-
-\author[4]{Manfred Jeusfeld}[%
+\author[1]{Nicolas Farabegoli}[%
 orcid=0000-0002-9421-8566,
 email=Manfred.Jeusfeld@acm.org,
 url=http://conceptbase.sourceforge.net/mjf/,
 ]
-\fnmark[1]
-\address[4]{University of Skövde, Högskolevägen 1, 541 28 Skövde, Sweden}
 
+\author[1]{Mirko Viroli}[%
+orcid=0000-0002-9421-8566,
+email=Manfred.Jeusfeld@acm.org,
+url=http://conceptbase.sourceforge.net/mjf/,
+]
 %% Footnotes
 \cortext[1]{Corresponding author.}
 \fntext[1]{These authors contributed equally.}
@@ -569,7 +564,7 @@ numbered.
 
 %%
 %% Define the bibliography file to be used
-\bibliography{sample-ceur}
+\bibliography{bibliography}
 
 %%
 %% If your work has an appendix, this is the place to put it.
